fix: add custom scrollbar styles for better user experience

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,27 @@
 @import "tailwindcss";
+
+body {
+	--sb-track-color: #3c3c3c;
+	--sb-thumb-color: #000000;
+	--sb-size: 18px;
+}
+
+body::-webkit-scrollbar {
+	width: var(--sb-size);
+}
+
+body::-webkit-scrollbar-track {
+	background: var(--sb-track-color);
+	border-radius: 30px;
+}
+
+body::-webkit-scrollbar-thumb {
+	background: var(--sb-thumb-color);
+	border-radius: 30px;
+}
+
+@supports not selector(::-webkit-scrollbar) {
+	body {
+		scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+	}
+}
